<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <Preference
        android:key="app_license"
        app:iconSpaceReserved="false"
        android:title="@string/preference_app_license"
        android:summary="@string/app_license"/>

    <Preference
        android:key="app_source_code"
        app:iconSpaceReserved="false"
        android:title="@string/preference_app_source_code_title"
        android:summary="@string/preference_app_source_code_summary">

        <intent
            android:action="android.intent.action.VIEW"
            android:data="@string/link_app_source_code"/>
    </Preference>

    <Preference
        android:key="app_author"
        app:iconSpaceReserved="false"
        android:title="@string/preference_app_author"
        android:summary="@string/app_author">

        <intent
            android:action="android.intent.action.VIEW"
            android:data="@string/link_app_author"/>
    </Preference>

    <Preference
        android:key="app_version"
        app:iconSpaceReserved="false"
        android:title="@string/preference_app_version"/>

</androidx.preference.PreferenceScreen>