<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/preference_category_savings"
        app:iconSpaceReserved="false">

        <ListPreference
            android:key="deadline_format"
            app:iconSpaceReserved="true"
            android:icon="@drawable/ic_calendar_hero"
            android:title="@string/preference_list_date_format"/>
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/preference_category_appearance"
        app:iconSpaceReserved="false">

        <ListPreference
            android:key="theme"
            app:iconSpaceReserved="true"
            android:icon="@drawable/ic_sun_hero"
            android:title="@string/preference_list_theme"/>

        <SwitchPreferenceCompat
            android:key="dynamic_colors"
            android:widgetLayout="@layout/view_preference_switch"
            app:iconSpaceReserved="true"
            android:icon="@drawable/ic_brush_hero"
            android:title="@string/preference_switch_dynamic_colors_title"
            android:summary="@string/preference_switch_dynamic_colors_summary"/>
    </PreferenceCategory>

    <PreferenceCategory
        app:title="@string/preference_category_security"
        app:iconSpaceReserved="false">

        <SwitchPreferenceCompat
            app:iconSpaceReserved="true"
            android:key="screen_privacy"
            android:icon="@drawable/ic_shield_hero"
            android:title="@string/preference_switch_screen_privacy_title"
            android:summary="@string/preference_switch_screen_privacy_summary"
            android:widgetLayout="@layout/view_preference_switch"/>
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/preference_category_backup"
        app:iconSpaceReserved="false">

        <Preference
            android:key="import"
            app:iconSpaceReserved="true"
            android:icon="@drawable/ic_import_hero"
            android:title="@string/preference_import_title"/>

        <Preference
            android:key="export"
            app:iconSpaceReserved="true"
            android:icon="@drawable/ic_export_hero"
            android:title="@string/preference_export_title"/>
    </PreferenceCategory>
</PreferenceScreen>