<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/sort"
        android:title="@string/menu_item_sort"
        app:showAsAction="always"
        android:icon="@drawable/ic_sort"
        tools:ignore="AlwaysShowAction">

        <menu>
            <group
                android:id="@+id/group_criteria"
                android:checkableBehavior="single">

                <item
                    android:id="@+id/sort_name"
                    android:title="@string/menu_item_sort_name"
                    app:showAsAction="never"/>

                <item
                    android:id="@+id/sort_value"
                    android:title="@string/menu_item_sort_current_saving"
                    app:showAsAction="never"/>

                <item
                    android:id="@+id/sort_goal"
                    android:title="@string/menu_item_sort_goal"
                    app:showAsAction="never"/>

                <item
                    android:id="@+id/sort_deadline"
                    android:title="@string/menu_item_sort_deadline"
                    app:showAsAction="never"/>
            </group>
            <group
                android:id="@+id/group_order"
                android:checkableBehavior="single">

                <item
                    android:id="@+id/sort_ascending"
                    android:title="@string/menu_item_sort_ascending"
                    app:showAsAction="never"/>

                <item
                    android:id="@+id/sort_descending"
                    android:title="@string/menu_item_sort_descending"
                    app:showAsAction="never"/>
            </group>
        </menu>
    </item>

    <item
        android:id="@+id/overflow"
        android:title="@string/menu_item_overflow"
        android:icon="@drawable/ic_more_vertical"
        app:showAsAction="always">

        <menu>
            <item
                android:id="@+id/archive"
                android:title="@string/menu_item_archive"/>

            <item
                android:id="@+id/settings"
                android:title="@string/menu_item_settings"/>

            <item
                android:id="@+id/about"
                android:title="@string/menu_item_about"/>
        </menu>
    </item>
</menu>