<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory
        android:title="@string/preference_import_title"
        app:iconSpaceReserved="false">

        <Preference
            android:key="import"
            android:title="@string/preference_import_title"
            app:summary="@string/import_data_summary"
            app:icon="@drawable/ic_import_hero" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/preference_export_title"
        app:iconSpaceReserved="false">

        <ListPreference
            android:key="backup_frequency"
            android:title="@string/backup_frequency"
            android:entries="@array/backup_frequency_entries"
            android:entryValues="@array/backup_frequency_values"
            android:defaultValue="0"
            app:useSimpleSummaryProvider="true"
            app:icon="@drawable/ic_calendar_range_hero" />

        <EditTextPreference
            android:key="backup_retention_count"
            android:title="@string/backup_retention_count"
            android:summary=""
            android:defaultValue="5"
            android:inputType="number"
            app:useSimpleSummaryProvider="true"
            app:icon="@drawable/ic_retention_hero" />

        <Preference
            android:key="backup_location"
            android:title="@string/backup_location"
            android:summary="@string/backup_location_not_set"
            app:icon="@drawable/ic_folder_hero" />

        <Preference
            android:key="manual_backup"
            android:title="@string/manual_backup"
            app:iconSpaceReserved="true"
            app:icon="@drawable/ic_export_hero" />
    </PreferenceCategory>
</PreferenceScreen>