<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:paddingEnd="24dp"
    android:paddingStart="24dp"
    android:paddingTop="16dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/field_saving_amount_layout"
        android:hint="@string/field_transaction_amount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/field_saving_amount_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:inputType="numberDecimal" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/field_transaction_note_layout"
        android:hint=""
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/field_transaction_note_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/field_transaction_notes"
            android:inputType="textMultiLine"
            android:maxLines="3" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButtonToggleGroup
        android:id="@+id/toggle_group_transaction_type"
        android:layout_marginTop="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:checkedButton="@+id/button_deposit"
        app:singleSelection="true"
        app:selectionRequired="true">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_deposit"
            android:text="@string/radio_button_deposit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.Piggsy.Button.ToggleButton" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_withdraw"
            android:text="@string/radio_button_withdraw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.Piggsy.Button.ToggleButton" />

    </com.google.android.material.button.MaterialButtonToggleGroup>

</LinearLayout>