<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.EditActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:fitsSystemWindows="true"
        app:liftOnScroll="true"
        app:liftOnScrollTargetViewId="@id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            app:title="@string/toolbar_edit"
            app:titleTextColor="?attr/colorOnSurface"
            app:menu="@menu/menu_delete"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"/>
    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:id="@+id/scrollView"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:orientation="vertical"
            android:paddingBottom="24dp"
            android:paddingStart="24dp"
            android:paddingEnd="24dp"
            android:paddingTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!-- Saving Name Field -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/field_saving_name_layout"
                android:hint="@string/field_saving_name"
                style="@style/Widget.Material3.TextInputLayout.FilledBox"
                android:layout_marginBottom="12dp"
                app:boxCornerRadiusTopStart="16dp"
                app:boxCornerRadiusTopEnd="16dp"
                app:fontFamily="@font/chivo_family"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/field_saving_name_text"
                    android:maxLines="1"
                    android:inputType="textAutoComplete"
                    app:fontFamily="@font/chivo_family"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Goal Field -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/field_saving_goal_layout"
                android:hint="@string/field_saving_goal"
                style="@style/Widget.Material3.TextInputLayout.FilledBox"
                android:layout_marginBottom="12dp"
                app:prefixText="$"
                app:fontFamily="@font/chivo_family"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/field_saving_goal_text"
                    android:maxLines="1"
                    android:inputType="numberDecimal"
                    app:fontFamily="@font/chivo_family"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Currency Selection -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/field_saving_currency_layout"
                android:hint="@string/preference_list_currency"
                style="@style/Widget.Material3.TextInputLayout.FilledBox.ExposedDropdownMenu"
                app:endIconDrawable="@drawable/ic_chevron_down_hero"
                android:layout_marginBottom="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <AutoCompleteTextView
                    android:id="@+id/field_saving_currency_text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="none"
                    app:fontFamily="@font/chivo_family" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Deadline Field -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/field_saving_deadline_layout"
                android:hint="@string/field_saving_deadline"
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                android:layout_marginBottom="10dp"
                app:endIconMode="custom"
                app:endIconDrawable="@drawable/ic_x_hero"
                app:fontFamily="@font/chivo_family"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/field_saving_deadline_text"
                    android:maxLines="1"
                    android:inputType="none"
                    android:focusable="false"
                    android:clickable="false"
                    app:fontFamily="@font/chivo_family"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Description Field -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/field_saving_description_layout"
                android:hint="@string/field_saving_description"
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                android:layout_marginBottom="16dp"
                app:fontFamily="@font/chivo_family"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/field_saving_description_text"
                    android:inputType="textAutoComplete|textMultiLine"
                    android:minLines="5"
                    android:gravity="top"
                    app:fontFamily="@font/chivo_family"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_save"
                android:text="@string/save"
                android:layout_width="match_parent"
                android:textSize="14sp"
                android:textFontWeight="600"
                android:layout_height="56dp"/>

        </LinearLayout>
    </ScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>